button default min-width and text alignment, fixes singleton icons

--- a/src/components/buttons.styl
+++ b/src/components/buttons.styl
@@ -23,6 +23,7 @@ $button
   vertical-align middle
   font-size $fontS
   line-height $lineHeight
+  min-width @line-height
   appearance none
   border $border
   outline 0
@@ -31,6 +32,7 @@ $button
   color $buttonColor
   text-decoration none
   cursor pointer
+  text-align center
   button-clear()
 
   &:hover
